[ADD] site can ceratee new items

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -18,7 +18,7 @@
                 <td><%= item.category.category_name %> |</td>
                 <td><%= item.status %> |</td>
                 <td><%= link_to 'Dismiss', 'items/dismiss' %><td>
-                <td><%= link_to 'Open', 'items/open' %><td>
+                <td><%= link_to 'Open', 'items/fulfill' %><td>
                 </tr>
             <% end %>
         </table>
