--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -3,7 +3,7 @@
     <head></head>
     <body>
         <h2>Insert a new supply need</h2>
-        <%= link_to '<- Back', '/' %>
+        <%= link_to '<- Back', root_path %>
         <%= form_with(url: "/items/create", method: "post") do %>
             <%= label_tag(:description, "Item description:") %>
             <%= text_field_tag(:description) %>
