--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -33,7 +33,7 @@
                 <td colspan="4"><%= item.status %> </td>
                 <td colspan="2"><%= link_to 'Dismiss', "/items/dismiss?id=#{item.id}" %><td>
                 <td colspan="2"><%= link_to 'Fulfill', "/items/fulfill?id=#{item.id}" %><td>
-                <td colspan="2"><%= link_to 'Comment', "/items/comment?id=#{item.id}" %><td>
+                <td colspan="2"><%= link_to 'Detail', "/items/comment?id=#{item.id}" %><td>
                 </tr>
             <% end %>
         </table>
