--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,18 @@
  *= require_tree .
  *= require_self
  */
+
+ .comment{
+   background-color: #F0F0F0;
+   color: #333;
+   border-radius: 10px;
+   padding-left:3px;
+   padding-right:3px;
+   margin:3px;
+ }
+
+ .comment_list{
+   width: 300px;
+   height: 300px;
+   overflow-y: scroll;
+ }
