[FIX] comment is now details in all email templates

--- a/app/views/stuff_mailer/comment_email.text.erb
+++ b/app/views/stuff_mailer/comment_email.text.erb
@@ -7,6 +7,6 @@ You have received a new comment about your item requirement.
   commenter:  <%= @user.email %>
 
 You can review the requirement in the next link:
-<%=ENV['SITE_URL']%>/items/comment?id=<%= @item.id %>
+<%=ENV['SITE_URL']%>/items/details?id=<%= @item.id %>
 
 Best regards.
