--- a/app/views/stuff_mailer/new_requirement_email.text.erb
+++ b/app/views/stuff_mailer/new_requirement_email.text.erb
@@ -8,6 +8,6 @@ A user has registered a new stuff requirement for the office
 The user email is <%= @user.email %>.
 
 You can review the requirement in the next link:
-<%=ENV['SITE_URL']%>/items/comment?id=<%= @new_item.id %>
+<%=ENV['SITE_URL']%>/items/details?id=<%= @new_item.id %>
 
 Best regards.
