--- a/app/views/stuff_mailer/status_change_email.text.erb
+++ b/app/views/stuff_mailer/status_change_email.text.erb
@@ -7,6 +7,6 @@ The status of your requirement has changed.
   New Status:  <%= @item.status %>
 
 You can review the requirement in the next link:
-<%=ENV['SITE_URL']%>/items/comment?id=<%= @item.id %>
+<%=ENV['SITE_URL']%>/items/details?id=<%= @item.id %>
 
 Best regards.
