--- a/app/views/stuff_mailer/status_change_email.html.erb
+++ b/app/views/stuff_mailer/status_change_email.html.erb
@@ -15,7 +15,7 @@
     </pre>
     </p>
 
-    <a href="<%=ENV['SITE_URL']%>/items/comment?id=<%= @item.id %>">See Requirement<a/>
+    <a href="<%=ENV['SITE_URL']%>/items/details?id=<%= @item.id %>">See Requirement<a/>
 
     <p>Best Regards.</p>
   </body>
